issue overflow en kanban mis cotizaciones resuelto

--- a/src/app/inicio/cliente/cotizaciones/mis-cotizaciones/mis-cotizaciones.component.css
+++ b/src/app/inicio/cliente/cotizaciones/mis-cotizaciones/mis-cotizaciones.component.css
@@ -100,7 +100,7 @@ option{
 .miscotizaciones-content-kanbanBoard {
   padding: 16px;
 
-  flex: 1;
+  flex: 1 1 0;
   max-width: 100vw;
 
   display: flex;
@@ -112,7 +112,7 @@ option{
 .miscotiaciones-content-kanbanTable {
   margin-right: 16px;
   padding: 10px;
-  max-height: 50%;
+  max-height: 100%;
   min-width: 355px;
   max-width: 355px;
   background-color: #f6f8fa;
